--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-/working_foler
+/working_folder
 
-/app/config/core.php
-/app/config/database.php
+!/app/config/core.php
+!/app/config/database.php
+!/app/Plugin/Usermgmt/
 
-/app/tmp
+/app/tmp/cache/models/*
+/app/tmp/cache/persistent/*
+/app/tmp/logs/*
