--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 !/app/config/database.php
 !/app/Plugin/Usermgmt/
 
+!/app/tmp/
+!/app/tmp/cache/
+!/app/tmp/cache/models/
+!/app/tmp/cache/persistent/
+
 /app/tmp/cache/models/*
 /app/tmp/cache/persistent/*
 /app/tmp/logs/*
